Fri Feb 23 19:24:30 USMST 2007  Yan Dai  <dai_y@ociweb.com>

        * performance-tests/SCTP/SOCK_SEQPACK_srv.cpp:

          Made run_server() and other functions and structures only compiled 
          when ACE_HAS_SCTP is defined. This should resolve the warning that the
          run_server() is defined but not used on some platforms.

Fri Feb 23 17:47:28 UTC 2007  Carlos O'Ryan  <coryan@atdesk.com>

        * tests/Bug_2815_Regression_Test.cpp:
          The test should be enabled only if the notification queue is
          also enabled.  Basically purge_pending_notifications() is not
          supported without the notification queue, and that is the
          operation we want to test.

Fri Feb 23 15:37:03 UTC 2007  Steve Huston  <shuston@riverace.com>

        * ace/OS_NS_dirent.inl (alphasort): Use a bigger hammer on the casts.

Fri Feb 23 10:50:41 UTC 2007  Olli Savia  <ops@iki.fi>

        * ace/OS_NS_dirent.inl:
          Fixed casts again. Hopefully now I got it right.
        
Fri Feb 23 08:56:15 UTC 2007  Olli Savia  <ops@iki.fi>

        * ace/OS_NS_dirent.inl:
          Added casts to fix compile errors.

        * ace/config-rtems.h:
        * ace/config-vxworks5.x.h:
        * ace/config-vxworks6.2.h:
        * ace/config-vxworks6.3.h:
        * ace/config-vxworks6.4.h:
          Added ACE_LACKS_ALPHASORT.

Thu Feb 22 18:37:00 UTC 2007  Iliyan Jeliazkov  <iliyan@ociweb.com>

        * ace/Service_Config.h:
        * ace/Service_Config.inl:
        * ace/Service_Config.cpp:
        * ace/Service_Gestalt.h:
        * ace/Service_Gestalt.cpp:

          Fixing build troubles caused by the different ACE_TSS interface
          for single-threaded builds. Eliminated the intermediary class
          (TSS_Resources) and now storing the actual service gestalt
          pointer in TSS, thus reducig the memory allocation overhead.

Thu Feb 22 16:45:30 UTC 2007  Steve Huston  <shuston@riverace.com>
